2012-07-19  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Exclude designs with non-missile long-range weapons from being
	classed as missile boats.

	* Added secondary sort by jump-distance for speed listing.

2012-07-16  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* Added offensive speed factor to speed listing.

	* Added a common code interface Unit, for mechs and combat vehicles.

2012-07-15  Christer Nyfält  <cjnyfalt@yahoo.co.uk>

	* First public alpha v0.0.1 becomes available.
