@@ -2,3 +2,4 @@
 MANIFEST
 dist
 build
+doc/html
