@@ -1,0 +1,24 @@
+.. SSW Parser documentation master file, created by
+   sphinx-quickstart on Sat Jul 21 22:01:05 2012.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+Welcome to SSW Parser's documentation!
+======================================
+
+Contents:
+
+.. toctree::
+   :maxdepth: 2
+
+.. automodule:: util
+   :members:
+
+
+Indices and tables
+==================
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
